# nodes-for-3d-slicer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
SlicerNodeEditor/: CMakeLists.txt  SlicerNodeEditor.py
SlicerNodeEditor/NodeGraph/: __init__.py  _qt.py  canvas.py  constants.py  edge.py  edge_item.py  executor.py  node.py  node_item.py  port.py  port_item.py  scene.py  search_popup.py  viewer_router.py
SlicerNodeEditor/Nodes/: __init__.py  base_node.py  filter_nodes.py  io_nodes.py  layout_node.py  process_nodes.py  register_nodes.py  segment_nodes.py  viz_nodes.py
SlicerNodeEditor/Resources/: demo_workflow.json
docs/design/: architecture.md  procedural_workflow_analysis.md
tools/: README.md  ask_gemma.ps1  gemma_audit_per_file.ps1
